# hireable

./: .gitignore  README.md  l.json  m.json  o.json  pyproject.toml
.github/instructions/: custom_tools.instructions.md
backend/: .env.example  linkedin_evaluator.py  main.py  script.py  script_leetcode.py  script_linkedin.py
backend/config/: db.py  portia.py
backend/models/: job.py  user.py
backend/tools/: leetcode.py  pdf_reader.py
backend/web-scraper/: scrape-socials.py
backend/web_scraper/: evaluate_platforms.py  scrape_socials.py
examples/: i.json  j.json  k.json  l.json  x.json  y.json  z.json
other_samples/: n.json  w.json  x.json  y.json  z.json
